Begun adding graphics